new changes on the body

--- a/Public/style.css
+++ b/Public/style.css
@@ -168,6 +168,7 @@ a {
 }
 
 .section1 {
+  margin-top: -30px;
   justify-content: center;
   display: flex;
   align-items: center;
@@ -177,11 +178,12 @@ a {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  animation: 3s 1s infinite alternate;
+  animation: 1s 1s infinite alternate;
   background-size: 100% 100%;
+  background-attachment: fixed;
   box-sizing: border-box;
   overflow: hidden;
-  animation: fadeInScale 1.2s ease-in forwards; /* Add animation */
+  animation: fadeInScale 0.5s ease-in forwards; /* Add animation */
 }
 /* Define the animation */
 @keyframes fadeInScale {
@@ -977,6 +979,9 @@ footer {
     font-size: 24px;
     font-weight: 700;
   }
+  header{
+    z-index: 5000;
+  }
 
   .signup,
   .login {
@@ -989,9 +994,8 @@ footer {
   }
   .section1 {
     width: 100% !important;
-    height: 60vh;
-    background-size: cover;
-    background-position: center;
+    background-size: contain; /* Resize to fit within the screen width */
+    background-position: center center; 
   }
   .content-div {
     width: 60%;
@@ -1709,9 +1713,7 @@ footer {
   }
   .section1 {
     background-position: center;
-    margin-top: 45px;
     width: 100%;
-    height: 60vh;
     background-size: cover;
     background-attachment: fixed;
   }
@@ -1761,16 +1763,18 @@ footer {
     width: 100%;
   }
   .secndsec6 {
-    width: 100%;
+    width: calc(100% -20px);
     gap: 30px;
     justify-content: center;
+    padding: 10px 24px;
+    box-sizing: border-box;
   }
   .sec6-flex {
-    width: 100%;
+    width: calc(100% -20px);
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    gap: 30px;
+    box-sizing: border-box;
   }
   .sec6-flex h6 {
     right: 0;
@@ -1780,6 +1784,7 @@ footer {
     gap: 30px;
     padding: 6px;
   }
+ 
   .sec6box p {
     font-size: 24px;
     font-weight: 400;
@@ -2054,6 +2059,9 @@ footer {
   .sec6box {
     gap: 30px;
     padding: 6px;
+  }
+  .sec6boximg{
+    gap: 50px;
   }
   .sec6box p {
     font-size: 16px;
