--- a/Public/swipper.css
+++ b/Public/swipper.css
@@ -2,12 +2,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap");
 
 /* General Styles */
-body {
-  font-family: "Inter", sans-serif;
-  margin: 0;
-  padding: 0;
-  background-color: #f5f5f5;
-}
 
 /* Swiper Container */
 .swiper-container {
@@ -67,8 +61,15 @@ body {
   text-align: left;
   text-underline-position: from-font;
   text-decoration-skip-ink: none;
+  
 }
-
+.myServices-p{
+  padding-left: 30px;
+}
+.myServices-p li{
+  color: black;
+  list-style: disc;
+}
 /* Navigation Buttons */
 .navigationbtn {
   display: flex;
